# Autonomous_drone_project

./: README.md  docker-compose.yml  startArgos
app/: Makefile
app/src/: pdrLed.c  start_mission.c
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: Map.js  index.jsx  setupTests.js
client/src/AnimationDrone/: AnimationDrone.css  AnimationDrone.jsx
client/src/App/: App.css  App.jsx
client/src/Argos-Simulation/: Argos.jsx  StateArgos.css  StateArgos.jsx  StateArgos.test.js
client/src/Drone/: Carte.jsx  Drone.css  Drone.jsx  State.jsx
exploration/: communication.h  drone.h  mainapp.c  mainapp.h  median_filter.h  setpoint.c  setpoint.h  state_machine.c  state_machine.h
server/: Dockerfile  crazy_flie_connect.py  drone.py  drone_info.py  server.py  socket1_argos.py  socket2_argos.py
server/tests/: test_crazy_flie_connect.py  test_drone.py  test_server.py
simulation/: Dockerfile  requirements.txt  testServer.py
simulation/examples/controllers/crazyflie_sensing/: CMakeLists.txt  VelocityManager.cpp  VelocityManager.h  crazyflie_sensing.cpp  crazyflie_sensing.h  missionStates.h
simulation/examples/experiments/: crazyflie_sensing.argos
simulation/examples/loop_functions/: CMakeLists.txt
simulation/examples/loop_functions/crazyflie_loop_functions/: CMakeLists.txt  crazyflie_loop_functions.cpp  crazyflie_loop_functions.h
